--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -82,7 +82,7 @@
 .about-section {
   background-color: #f9fbff;
   color: #333;
-  padding: 60px 20px;
+  padding: 60px 20px 30px 20px;
 }
 
 .about-section p {
@@ -192,6 +192,7 @@
   padding: 4px 8px;
   border-radius: 4px;
   text-align: center;
+  font-size: 1rem;
 }
 
 .product-img {
@@ -324,7 +325,7 @@
 }
 
 .card-title {
-  font-size: 1.25rem;
+  font-size: 0.25rem;
   font-weight: bold;
   margin-bottom: 10px;
   color: #123c87;
